Harden walker transport thread boundaries and access gates